# ActixWeb

./: .env  Cargo.toml  README.md
migrations/2019-05-09-163722_create_lots/: down.sql  up.sql
migrations/2019-10-29-165037_create_users/: up.sql
migrations/2019-10-30-202528_invitations/: up.sql
migrations/2019-11-13-181437_player_data/: down.sql  up.sql
migrations/2019-11-14-191231_factories/: down.sql  up.sql
migrations/2019-11-16-142034_add_name_field_factories/: down.sql  up.sql
migrations/2019-11-16-144824_add_id_field_default_factories/: down.sql  up.sql
migrations/2019-11-20-115653_alter-user/: up.sql
migrations/2019-11-20-123045_alter_user_player_data/: down.sql  up.sql
migrations/2019-11-20-124555_alter_player_factories/: up.sql
migrations/2019-11-20-125557_add_player_factories_in_player_data/: down.sql  up.sql
migrations/2019-11-20-131158_fix_nullable_fields/: up.sql
migrations/2019-11-20-143650_remove_factories_player_data/: up.sql
migrations/2019-11-24-194556_update_player_data/: up.sql
migrations/2019-11-24-203559_gold_generation_player_data/: up.sql
migrations/2019-11-29-172901_add_pks/: up.sql
migrations/2019-11-29-174646_alter_factories/: up.sql
migrations/2019-11-29-213754_alter_player_data/: up.sql
migrations/2019-12-09-143100_remove_extra_ids/: up.sql
migrations/2019-12-09-150806_add_constraints_player_data/: up.sql
migrations/2019-12-09-194956_add_special_currency/: up.sql
rls/: .rustc_info.json
rls/debug/: libhello_cargo-ba3b9fb7d4262878.d  libhello_cargo.d
rls/debug/.fingerprint/hello_cargo-6d3c8b870c7f5cce/: bin-hello_cargo-6d3c8b870c7f5cce  bin-hello_cargo-6d3c8b870c7f5cce.json
rls/debug/.fingerprint/hello_cargo-ba3b9fb7d4262878/: test-bin-hello_cargo-ba3b9fb7d4262878  test-bin-hello_cargo-ba3b9fb7d4262878.json
rls/debug/.fingerprint/libc-816e4200ab854afb/: lib-libc-816e4200ab854afb  (+1 more)
src/: draw.rs  game.rs  graphql.rs  main.rs  router.rs  schema.rs  snake.rs
src/__bin/: init_data.json  init_factories.csv  init_users.json  seed.rs
src/api/: auth.rs  battle.rs  factories.rs  invitation.rs  login.rs  lots.rs  mod.rs  register.rs  time.rs
src/model/: factory.rs  graphql_schema.rs  invitations.rs  lot.rs  mod.rs  player.rs  user.rs
src/model/proto_models/: test.rs
src/share/: db.rs  email.rs  errors.rs  mod.rs  utils.rs  web_sockets.rs
start_world/: Cargo.toml
start_world/src/: main.rs
static/: 404.html  welcome.html
tests/: register.rs
(+2 files in other folders)
