[package]
name = "e-tron-api"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2018"

# scripts

# cargo watch -x run

[dependencies]
actix-web = "1.0.8"
actix-identity = "0.1.0"
actix-files = "0.1.6"
lazy_static = "1.4.0"
derive_more = "0.15.0"
env_logger = "0.7.1"
futures = "0.1.26"
bytes = "0.4.12"
actix-rt = "0.2.5"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.101"
serde_derive = "^1.0.101"
serde_json = "1.0.41"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.14"
dotenv_codegen = "0.15.0"
uuid = { version = "0.6", features = ["serde", "v4"] }