[package]
name = "e-tron-api"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2018"

# scripts
# cargo watch -x run

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-web = "2.0.0-alpha.3"
actix-files = "0.2.0-alpha.3"
actix-session = "0.3.0-alpha.3"
actix-utils = "1.0.0-alpha.3"
futures = "0.3.1"
actix = "0.8.2"
#actix-identity = "0.1.0"
#actix-cors = "0.1.0"
#actix-web-actors = "1.0.0"
#actix-protobuf = "0.4.1"
#prost = "0.5.0"
#prost-derive = "0.5.0"
lazy_static = "1.4.0"
derive_more = "0.15.0"
env_logger = "0.7.1"
bytes = "0.4.12"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.14"
dotenv_codegen="0.14.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
#juniper = "0.13"
names = "0.10.0" ## test generates random names